@@ -1,3 +1,11 @@
+2005-11-04 10:19 Mike Park  <mike.park@nasa.gov>
+
+	* src/unit_main.c (main) --phase -1: made an array of GridEdger
+	pointers to seperate gridedgerInsert from gridedgerRemoveUnused
+	to make plots inbetween. Note that renum call backs are not
+	implemented, so do renumber (by plotting) and keep calling
+	gridedger routines.
+
 2005-11-03 22:22 Mike Park  <mike.park@nasa.gov>
 
 	* src/unit_main.c (main) --phase -1: remove unused nodes after
